--- a/PAGES/3a_variables/index.html
+++ b/PAGES/3a_variables/index.html
@@ -2123,7 +2123,7 @@ x &#43;&#61; 3       #shorthand notation for &#39;x &#61; x &#43; 3&#39;</code><
 <p>The objects referenced by a variable can hold either a   <span style="color: rgb(62, 121, 180);"><strong> single element</strong></span> or a   <span style="color: rgb(62, 121, 180);"><strong> collection of elements</strong></span>. Collections are also known as containers, and we refer to them interchangeably throughout the website. Below, we provide a brief overview of single-element objects and collections.</p>
 <p> <div class="multiple_pics">
   <h2 style="color:rgb(63, 99,136)">Objects</h2>
-    <img src="/julia_book/assets/PAGES/3a_variables/tikz/variable02.svg" style="width:600px; height:auto; margin-top:1em;">  
+    <img src="/julia_book/assets/PAGES/3a_variables/tikz/list_variables01.svg" style="width:600px; height:auto; margin-top:1em;">  
 </div> <br/></p>
 <p>The diagram above describes informally the nature of an object&#39;s value. More precisely, each object holds a value that is described in Julia through a type. The most common types for numeric single-element variables are <code>Int64</code> for integers, <code>Float64</code> for decimal numbers, and <code>Bool</code> for binary values. Likewise, the type <code>Char</code> represent characters. It serves as the building block for the type <code>String</code>, which are a collection of characters used to represent text. </p>
 <p>When it comes to collections, their types usually describe both the nature of the object &#40;e.g., a vector, a matrix&#41; and the types of its elements &#40;e.g., integer, floats&#41;. For example, <code>&#91;2,4,6&#93;</code> has type <code>Vector&#123;Int64&#125;</code>, which means that the object is a <code>Vector</code> and its elements have type <code>Int64</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Given a variable <code>x</code>, you can identify its type by executing <code>typeof&#40;x&#41;</code>, and its element&#39;s type by <code>eltype&#40;x&#41;</code>. For instance, if <code>x &#61; &#91;2,4,6&#93;</code>, the output of <code>typeof&#40;x&#41;</code> is <code>Vector&#123;Int64&#125;</code> and the output of <code>eltype&#40;x&#41;</code> is <code>Int64</code>  </span></span> The arguments enclosed within <code>&#123;&#125;</code> are actually the type&#39;s parameters, and their content can vary when we consider other types.</p>
@@ -2148,7 +2148,7 @@ x &#43;&#61; 3       #shorthand notation for &#39;x &#61; x &#43; 3&#39;</code><
       <div class="col-lg- mx-auto">
         <h2>Operators</h2></p>
 <p>Operators are symbols that perform operations on objects. For instance, the expression <code>x &#43; y</code> performs the addition of <code>x</code> and <code>y</code>, and returns their sum as its output. The symbol <code>&#43;</code> in this expression is called an   <span style="color: rgb(62, 121, 180);"><strong> operator</strong></span>. Likewise, <code>x</code> and <code>y</code> are its   <span style="color: rgb(62, 121, 180);"><strong> operands</strong></span>, which represent the operator&#39;s inputs to perform the calculation.</p>
-<p> <em> Operators follow specific syntax rules</em> when they&#39;re classified by their number of operands. Next, we present this syntax through several examples. Just focus on how operators are written, even if you don&#39;t fully understand what they do in the examples.</p>
+<p> <em> Operators follow specific syntax rules</em> when they&#39;re classified by their number of operands. Next, we present this syntax through several examples. Just focus on how operators are written, even if you don&#39;t fully understand what they do in the examples. Identifying the syntax of operators will be useful when we discuss vectorized operations.</p>
 <div class="itemNoSpace"><ul>
 <li><p>  <span style="color: rgb(62, 121, 180);"><strong> Unary operators</strong></span>: They use  <em> one operand</em>, with the operator written to the left of the operand.  <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Operators to the left of the operator are known as <strong> prefix operators</strong>. Conversely, operators written to the right of the operand are known as <strong> postfix operators</strong>, and Julia has a few of them &#40;e.g., <code>&#39;</code> to transpose a vector or matrix <code>x</code> is written by <code>x&#39;</code>&#41;. We won&#39;t use postfix operators throughout this website.  </span></span> </p>
 <p>The syntax is <code>&lt;operator&gt;x</code>, such as <code>√x</code> or <code>-x</code>.</p>
@@ -2174,7 +2174,7 @@ x &#43;&#61; 3       #shorthand notation for &#39;x &#61; x &#43; 3&#39;</code><
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\3b_univariables" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 6, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 8, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
