--- a/PAGES/3c_arrays/index.html
+++ b/PAGES/3c_arrays/index.html
@@ -2044,7 +2044,7 @@ color: white;
 </li>
 </ul>
 <p>  <span style="color: rgb(62, 121, 180);"><strong> Arrays</strong></span> represent one of the most common data structure for collections. They are formally defined as objects with type <code>Array&#123;T,d&#125;</code>, where <code>d</code> is the array&#39;s dimension and <code>T</code> is its elements&#39; type &#40;e.g., <code>Int64</code> or <code>Float64</code>&#41;.</p>
-<p>Two special types of arrays are   <span style="color: rgb(62, 121, 180);"><strong> vectors</strong></span> &#40;1-dimensional arrays&#41; and   <span style="color: rgb(62, 121, 180);"><strong> matrices</strong></span> &#40;2-dimensional arrays&#41;. Specifically, the type <code>Vector&#123;T&#125;</code> is an alias for <code>Array&#123;T,1&#125;</code>, whereas <code>Matrix&#123;T&#125;</code> is an alias for <code>Array&#123;T,2&#125;</code>. Although we include an optional section about matrices, the website will almost exclusively concentrate on vectors, as they&#39;re sufficient for explaining the fundamentals of Julia.</p>
+<p>Two special types of arrays are   <span style="color: rgb(62, 121, 180);"><strong> vectors</strong></span> &#40;1-dimensional arrays&#41; and   <span style="color: rgb(62, 121, 180);"><strong> matrices</strong></span> &#40;2-dimensional arrays&#41;. Specifically, the type <code>Vector&#123;T&#125;</code> is an alias for <code>Array&#123;T,1&#125;</code>, whereas <code>Matrix&#123;T&#125;</code> is an alias for <code>Array&#123;T,2&#125;</code>. We include a section about matrices, although this is optional—the website almost exclusively concentrates on vectors, which are sufficient for explaining Julia&#39;s fundamentals.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Remark</b> </span>  </div>  <div class=content> <strong> Julia uses 1 as an array's first index</strong>. This contrasts with many other languages &#40;e.g., Python&#41;, where 0 is used as the first index.  </div>  </div>
@@ -2159,7 +2159,7 @@ Y &#61; &#91;4 5 6&#93;     # row-vector</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\3c2_tuples" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 6, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 8, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
