--- a/PAGES/4b_scope/index.html
+++ b/PAGES/4b_scope/index.html
@@ -2034,12 +2034,12 @@ color: white;
 <p>  <span style="color: rgb(62, 121, 180);"><strong> Variable scope</strong></span> refers to the code block in which a variable is accessible. The concept allows us to distinguish between   <span style="color: rgb(62, 121, 180);"><strong> global variables</strong></span>, which are visible in any part of the code, and   <span style="color: rgb(62, 121, 180);"><strong> local variables</strong></span>, which only exist within a specific code block. The existence of scopes determines that the same variable <code>x</code> could refer to different objects, depending on where it&#39;s called.</p>
 <p>Julia adheres to specific rules for variable scope when it comes to functions. Specifically, given a variable <code>x</code> defined outside a function:</p>
 <ul>
-<li><p>if a new variable <code>x</code> is defined inside a function or is passed as an argument to the function, then <code>x</code> is considered  <em> local</em> to that function. Moreover, any reference to <code>x</code> within the function refers to the local variable, without any relation to the variable <code>x</code> defined outside the function.</p>
+<li><p>if a new variable <code>x</code> is defined inside a function or is passed to the function as an argument, then <code>x</code> is considered  <em> local</em> to that function. Moreover, any reference to <code>x</code> within the function refers to the local variable, without any relation to the variable <code>x</code> defined outside the function.</p>
 </li>
-<li><p>if the function includes <code>x</code>, but it doesn&#39;t define a new <code>x</code> nor <code>x</code> is a function argument, then <code>x</code> refers to the  <em> global</em> variable defined outside the function.</p>
+<li><p>if the function includes <code>x</code>, but it doesn&#39;t define a new <code>x</code> nor <code>x</code> is a function argument, then <code>x</code> refers to the variable defined outside the function &#40;i.e., the global variable&#41;.</p>
 </li>
 </ul>
-<p>These rules may appear confusing at first, so we next consider several examples.</p>
+<p>These rules can be better understood by illustrating them, as we do next.</p>
 <p>      </div>
     </div>
   </div>
@@ -2304,7 +2304,7 @@ expenditure_iPhones &#61; expenditure&#40;gross_value, tax_paid&#41;</code></pre
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\4c_arguments" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 6, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 8, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
