--- a/PAGES/3b2_strings/index.html
+++ b/PAGES/3b2_strings/index.html
@@ -2041,7 +2041,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Characters</h2> </p>
-<p><code>Char</code> is the type for representing characters. It forms the basis for the type <code>String</code>, which represents text. <code>Char</code> supports Unicode characters, thus including numbers, letters, and symbols. The notation for character <code>x</code> is <code>&#39;x&#39;</code>.</p>
+<p><code>Char</code> is the type for representing characters. It forms the basis for the type <code>String</code>, which is used to represent text. <code>Char</code> supports Unicode characters, thus including numbers, letters, and symbols. The notation for character <code>x</code> is <code>&#39;x&#39;</code>.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia"># x equals the character &#39;a&#39;
 x &#61; &#39;a&#39;
@@ -2050,7 +2050,7 @@ x &#61; &#39;a&#39;
 x &#61; &#39;β&#39;
 y &#61; &#39;🐒&#39;</code></pre>
 <p></div> </div>  </details></div>
-<p>Notice that characters must be enclosed in single quotes <code>&#39; &#39;</code>, or Julia will interpret the characters as a variable. This is true even for symbols such as 🐒.</p>
+<p>Notice that characters must be enclosed in single quotes <code>&#39; &#39;</code>. Otherwise, Julia will interpret the characters as variables rather than literal characters. This holds even for symbols like 🐒.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia"># any character is allowed for defining a variable
 🐒 &#61; 2          # 🐒 represents a variable, just like if we had defined x &#61; 2
@@ -2084,19 +2084,31 @@ x &#61; &quot;&quot;&quot;Hello, beautiful world&quot;&quot;&quot;</code></pre>
         <h2>String Interpolation</h2> </p>
 <p>When we work with a variable of type <code>String</code>, it&#39;s possible to include text that will be evaluated as Julia code. This text will then be replaced with its resulting output. The technique is referred to as   <span style="color: rgb(62, 121, 180);"><strong> string interpolation</strong></span>. </p>
 <p>String interpolation accepts any expression that Julia can evaluate, and is inserted into the text by adding <code>&#36;</code>. If the expression requires more than one word, you need to delimit the expression with curly braces <code>&#36;&#40;&#41;</code>. </p>
-<p>The following example interpolates text with a variable.</p>
- <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
+<p>The following examples interpolate text with a variable and a computation.</p>
+ <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
+ <div class="tab_wrapper">
+ <div class="tab_code_links">
+    <button class="tablink first_tab active" data-id=""> Interpolating Variable </button>
+    <button class="tablink" data-id=""> Interpolating Computation </button>
+</div><div data-id="" class="tabcontent active">
+<div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">number_students &#61; 10
 
-x &#61; &quot;There are &#36;&#40;number_students&#41; students in the course&quot;         #&#96;String&#96; variable with &#96;number_students&#96; interpolated</code></pre>
-<p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x</code><br/><div class="akin_to_pre">"There are 10 students in the course"</div> </div></div> </div>   </details></div>
-<p>Interpolation also accepts computations. For instance, consider that Messi played 50 matches and scored 2 goals per match. Then, the code below is perfectly valid. </p>
-<p> <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
+
+x &#61; &quot;There are &#36;&#40;number_students&#41; students in the course&quot;</code></pre>
+<p></div></div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x</code><br/><div class="akin_to_pre">"There are 10 students in the course"</div> </div></div> </div> 
+ </div><div data-id="" class="tabcontent">
+<div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">number_matches  &#61; 50
 goals_per_match &#61; 2
 
 x &#61; &quot;Last year, Messi scored &#36;&#40;number_matches * goals_per_match&#41; goals&quot;</code></pre>
-<p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x</code><br/><div class="akin_to_pre">"Last year, Messi scored 100 goals"</div> </div></div> </div>   </details></div> <br/>       </div>
+<p></div></div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x</code><br/><div class="akin_to_pre">"Last year, Messi scored 100 goals"</div> </div></div> </div> 
+ </div></div>
+<p>  </p></details></div>
+<p><br/>       </div>
     </div>
   </div>
 </section>
@@ -2108,7 +2120,7 @@ x &#61; &quot;Last year, Messi scored &#36;&#40;number_matches * goals_per_match
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\3c_arrays" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 6, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 8, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
