--- a/PAGES/4d_vectorizing/index.html
+++ b/PAGES/4d_vectorizing/index.html
@@ -2461,7 +2461,7 @@ list &#61; &#91;1, 2, 3&#93;</code></pre>
  0</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>We&#39;ve avoided the broadcasting option with a vector to emphasize that we should broadcast using <code>Ref</code> or a tuple.</p>
+<p>We&#39;ve avoided the broadcasting option with a vector, with the goal of emphasizing that we should always broadcast using <code>Ref</code> or a tuple.</p>
 <p>      </div>
     </div>
   </div>
