--- a/PAGES/8a_allocations/index.html
+++ b/PAGES/8a_allocations/index.html
@@ -2069,7 +2069,7 @@ end
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Arrays and Slices Do Allocate Memory</h2></p>
-<p>Array creation allocates memory, regardless of whether the result is stored or not. For instance, executing the following function allocate memory.</p>
+<p>Array creation allocates memory, regardless of whether the result is stored or not. For instance, executing the following function allocates memory.</p>
  <div class=" code_box"> <details  open><summary> Vector Creation  </summary> <div class="code_inline"><div class="code_NoFormat"><pre><code class="language-julia">foo&#40;&#41;  &#61; &#91;1,2,3&#93;
 
 
