--- a/PAGES/1c_vscode/index.html
+++ b/PAGES/1c_vscode/index.html
@@ -2025,7 +2025,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="features_and_keyboard_shortcuts" class="scrollspy section-bg-color">
+<section id="features_and_keyboard_shortcuts" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2078,7 +2078,7 @@ color: white;
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\2b_tips" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 9, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 10, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
