--- a/PAGES/3c2_tuples/index.html
+++ b/PAGES/3c2_tuples/index.html
@@ -2026,7 +2026,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2039,7 +2039,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="tuples" class="scrollspy">
+<section id="tuples" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2097,7 +2097,7 @@ x &#61;  4,5,6           #alternative notation</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\4a0_packages" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 9, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 10, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
