--- a/PAGES/4a1_define_func/index.html
+++ b/PAGES/4a1_define_func/index.html
@@ -2026,7 +2026,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2039,7 +2039,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="user-defined_functions" class="scrollspy">
+<section id="user-defined_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2139,7 +2139,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="anonymous_functions" class="scrollspy section-bg-color">
+<section id="anonymous_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2188,7 +2188,7 @@ result &#61; map&#40;add_two, &#91;1, 2, 3&#93;&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="macros" class="scrollspy">
+<section id="macros" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2206,7 +2206,7 @@ result &#61; map&#40;add_two, &#91;1, 2, 3&#93;&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="a_functions_documentation_optional" class="scrollspy section-bg-color">
+<section id="a_functions_documentation_optional" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2245,7 +2245,7 @@ add_three&#40;x&#41; &#61; x &#43; 3</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\4b_scope" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 9, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 10, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
