--- a/PAGES/6a0_slices/index.html
+++ b/PAGES/6a0_slices/index.html
@@ -2026,7 +2026,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2037,7 +2037,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="slices_and" class="scrollspy">
+<section id="slices_and" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2096,7 +2096,7 @@ x&#91;1&#93; &#61; 0        # it DOES modify &#39;y&#39;</code></pre>
     </div>
   </div>
 </section>
-<section id="the_function_view" class="scrollspy section-bg-color">
+<section id="the_function_view" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2152,7 +2152,7 @@ x&#91;1:2&#93; .&#43; 2
     </div>
   </div>
 </section>
-<section id="macros_view_and_views" class="scrollspy">
+<section id="macros_view_and_views" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2208,7 +2208,7 @@ end</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6a1_indexing" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 9, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 10, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
