--- a/PAGES/7b2_fixes_stability/index.html
+++ b/PAGES/7b2_fixes_stability/index.html
@@ -1979,7 +1979,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1991,7 +1991,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="global_variables" class="scrollspy section-bg-color">
+<section id="global_variables" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2038,7 +2038,7 @@ z &#61; log&#40;y&#41;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="concrete_types_and_supertypes" class="scrollspy">
+<section id="concrete_types_and_supertypes" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2102,7 +2102,7 @@ x .&#61; 1                      # 1 is converted to 1.0 due to x&#39;s type
     </div>
   </div>
 </section>
-<section id="type_stability_with_global_variables" class="scrollspy section-bg-color">
+<section id="type_stability_with_global_variables" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2202,7 +2202,7 @@ foo&#40;x::Vector&#123;Number&#125;&#41; &#61; sum&#40;log.&#40;x&#41;&#41;</cod
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\7b3_barriers" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 9, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 10, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
