--- a/index.html
+++ b/index.html
@@ -1803,7 +1803,7 @@ section{
 
 <div class="franklin-content">
  <div class="home_container">
-<section id="welcome_to_the_site" class="scrollspy section-bg-color">
+<section id="welcome_to_the_site" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1815,7 +1815,7 @@ section{
     </div>
   </div>
 </section>
-<section id="a_quick_overview_of_the_book" class="scrollspy">
+<section id="a_quick_overview_of_the_book" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1838,7 +1838,7 @@ section{
     </div>
   </div>
 </section>
-<section id="keyboard_shortcuts" class="scrollspy section-bg-color">
+<section id="keyboard_shortcuts" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1900,7 +1900,7 @@ section{
     </div>
   </div>
 </section>
-<section id="13633231208144796923" class="scrollspy">
+<section id="13633231208144796923" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1964,7 +1964,7 @@ section{
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\1a_installation" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 9, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 10, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
